[package]
name = "simulation"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# Simulation service (§7) — the slow path that confirms or retracts a provisional
# alert with revm. Sprint 5 builds its *front half*:
#
#   `dispatcher` — a thin Kafka consumer on `PreliminaryAlertCreated` that, for
#     every provisional alert, publishes one `SimulationJob` *command* onto the
#     RabbitMQ `sim.jobs` work queue (§2/§7) and emits a `SimulationRequested`
#     domain event back on Kafka so the *request* is auditable even though the
#     command itself is deliberately not (the audit log records facts, and a
#     command is not one — only its result re-enters the backbone).
#   `command` — the `SimulationJob` type + the pure `PreliminaryAlertCreated →
#     (SimulationJob, SimulationRequested)` mapping (Kafka/RabbitMQ-free, so it is
#     `assert_eq!`-testable).
#   `queue` — the `JobSink` publish seam (mirrors `event-bus`'s `EventSink`): an
#     object-safe trait + the lapin-backed `RabbitJobSink` + the at-least-once
#     `publish_resilient` policy, so the worker pool (task 3) and the dispatcher
#     share one place that knows how to talk to RabbitMQ.
#
# The worker pool (revm on rayon, task 3) and the result→incident path (Sprint 6)
# land on top of this seam.

[[bin]]
name = "simulation"
path = "src/main.rs"

# The worker pool that drains `sim.jobs` (Sprint 5 t3) — a separate binary so it
# scales independently of the dispatcher (§20: "scale aggressively — revm CPU is
# the bottleneck"; competing consumers = run N replicas).
[[bin]]
name = "simulation-worker"
path = "src/bin/worker.rs"

[dependencies]
events = { workspace = true }
# Shared Kafka producer seam (§20) — the dispatcher ships its `SimulationRequested`
# audit event through the same `EventSink`/`publish_resilient` ingestion/detection
# use, so the at-least-once policy lives in one place.
event-bus = { workspace = true }
telemetry = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
# Event-time (`occurred_at`) drives the incident projection's last-writer-wins
# figure updates + reorder tolerance (§7); the type comes from the envelope.
chrono = { workspace = true }

# The async dispatcher runs on tokio with a `CancellationToken` for graceful
# drain; `rdkafka` is the `PreliminaryAlertCreated` consumer; `async-trait` for
# the `JobSink`/`EventSink` seams. `tokio-stream` drains the worker pool's lapin
# `Consumer` (the competing-consumer side of `sim.jobs`).
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
rdkafka = { workspace = true }
async-trait = { workspace = true }

# RabbitMQ command broker (§7) — see the workspace note. lapin is handed tokio's
# executor+reactor so it shares the service's single runtime.
lapin = { workspace = true }
tokio-executor-trait = { workspace = true }
tokio-reactor-trait = { workspace = true }

# The simulation engine (§7): the worker pool re-executes a job's bundle in revm.
# `rayon` is the CPU worker pool the revm runs land on, off the async reactor
# (§17); the async worker bridges to it via a oneshot. See the workspace notes.
revm = { workspace = true }
rayon = { workspace = true }

[features]
# Exposes `simulation::test_util` (recording sinks, canned scenarios + ack handle).
# Enabled for this crate's own integration tests via the self dev-dependency below,
# so `tests/` and the in-crate unit tests share one set of doubles.
test-util = []

[dev-dependencies]
# Self-dependency with `test-util` on, so the `tests/` integration crate sees
# `simulation::test_util` (the in-crate unit tests get it under `cfg(test)`).
simulation = { path = ".", features = ["test-util"] }
# Only the tests construct on-chain addresses directly; non-test code reaches
# alloy's `Address` through `events::primitives::AccountAddress`.
alloy-primitives = { workspace = true }
# The projection tests mint explicit envelope event ids to model redelivery.
uuid = { workspace = true }
# Live-broker integration test (`tests/topology.rs`, `#[ignore]`): spin a real
# RabbitMQ in a container so the topology declaration is exercised against the
# broker that actually enforces quorum-vs-priority, not just the arg builders.
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["rabbitmq"] }

[lints]
workspace = true
