[package]
name = "telemetry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# Observability foundation (§19): one place every service calls to wire up
# `tracing` and W3C trace-context propagation, so distributed traces stitch
# across service boundaries. No service-specific logic lives here.

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true

[dev-dependencies]
tokio.workspace = true

[[example]]
name = "trace_propagation"
