[package]
name = "telemetry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# Observability foundation (§19): one place every service calls to wire up
# `tracing` + W3C trace-context propagation and the Prometheus metrics exporter,
# so distributed traces stitch across service boundaries and every service
# exposes `/metrics` the same way. No service-specific logic lives here.

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
# Prometheus exporter (§19): `telemetry::metrics::init` installs the global
# recorder + `/metrics` HTTP listener — the metrics counterpart to `init`.
metrics-exporter-prometheus.workspace = true
# Health endpoints (§20): `telemetry::health` serves /livez + /readyz over a
# plain Tokio listener — no HTTP framework for two fixed probe paths.
# `io-util` is stated explicitly (AsyncRead/WriteExt) rather than inherited
# from whatever else happens to unify it in.
tokio = { workspace = true, features = ["io-util"] }
tokio-util.workspace = true

[dev-dependencies]
tokio.workspace = true

[[example]]
name = "trace_propagation"
